# March-Madness-ML

./: DataPreprocessing.py  MarchMadness.py  pyproject.toml
Data/KaggleData/: Conference.csv  TourneyResults.csv
Data/RatingStats/: RatingStats_2020.csv  RatingStats_2021.csv  RatingStats_2022.csv  RatingStats_2023.csv  RatingStats_2024.csv  RatingStats_2025.csv  Rk,School,Conf,,AP Rank,W,L,Pts,Opp.txt
Data/RegSeasonStats/: MMStats_2020.csv  MMStats_2021.csv  MMStats_2022.csv  MMStats_2023.csv  MMStats_2024.csv  MMStats_2025.csv
