[project]
name = "march-madness-ml"
version = "0.1.0"
description = "Machine learning for predicting March Madness outcomes."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "numpy",
    "pandas>=2.0",
    "scikit-learn>=1.3",  # sklearn is actually scikit-learn
    "keras>=2.12",
    "tensorflow>=2.12,<2.16",
    "matplotlib>=3.6",
    "xgboost>=1.7"
]